--- a/paper/tool.tex
+++ b/paper/tool.tex
@@ -53,86 +53,87 @@ cd smashpp
 \end{itemize}
 
 \subsection{Run \smashpp}
-Various options are provided with the interface of the proposed tool, which are described in Table~\ref{tab.options}.
+Various options are provided with the interface of the proposed tool, which are described in Table~\ref{tab.options}. The commands for running \smashpp have the form of the following:
+\begin{code}[style=bash]
+  ./smashpp [OPTIONS]  -r <REF-FILE>  -t <TAR-FILE>
+\end{code}
 
 \begin{small}
-% \begin{longtable}{@{}lp{2.9cm}p{9.5cm}@{}}
-% \begin{longtable}{@{}lp{2.9cm}X@{}}
-\begin{tabularx}{\linewidth{@{}llX@{}}
-  \caption{Options.}
+\begin{tabularx}{\linewidth}{@{}lp{2.95cm}X@{}}
+  \caption{Options provided by \smashpp interface.}
   \label{tab.options} \\
   \toprule
   Flag & Input & Description \\
   \midrule
-%   \mono{-r} $^*$ & Seq/FASTA/FASTQ file & Reference file. It is highly recommended to have short name. \\
-%   \midrule
-%   \mono{-t} $^*$ & Seq/FASTA/FASTQ file  & Target file. It is highly recommended to have short name. \\
-%   \midrule
-%   \mono{-l} & Integer: $[0, 5]$ & Level of compression (default: 0). \\
-%   \midrule
-%   \mono{-m} & Integer: $[1, 2^{32}-1]$ & Minimum segment size (default: 50). Only those regions in the reference file that are bigger than this value would be able to be considered for compression. \\
-%   % \multicolumn{2}{@{}l@{}}{Minimum segment size (default: 50). Only those regions in the reference file that are bigger than this value would be able to be considered for compression.} \\
-%   \midrule
-%   \mono{-e} & Float: $[0.0, 100.0]$ & Entropy of `N's (default: 2.0). In implementation of the reference-based compression, we have replaced `N' bases in the references and the targets with `A's and `T's, respectively. On reference-free compression, they are replaced with `A's, in both references and targets. If a user tends to replace `N' bases in a sequence with a normal distribution of `A', `C', `G' and `T's, he/she can employ GOOSE toolkit~\cite{web-goose}. \\
-%   \midrule
-%   \mono{-n} & Integer: $[1, 8]$ & Number of threads (default: 4). Creating multiple finite-context models and substitutional-tolerant Markov models can be done in a multi-threaded fashion. \\
-%   \midrule
-%   \mono{-f} & Integer: $[1, 2^{32}-1]$ & Filter size (default: 256). In the process of finding similar regions in the reference and the target sequences, the information content that would be obtained by compression needs to be filtered. \\
-%   \midrule
-%   \mono{-ft} & Integer/String: \{0$|$rectangular, 1$|$hamming, 2$|$hann, 3$|$blackman, 4$|$triangular, 5$|$welch, 6$|$sine, 7$|$nuttall\} & Filter type/windowing function (default: hann). Besides Hann window that is used by default to smooth the information content (profile), we have implemented several other windowing functions: Blackman~\cite{blackman1959particular}, Hamming~\cite{tukey1949measuring}, Nuttall~\cite{nuttall1981some}, rectangular~\cite{oppenheim1999discrete}, sine~\cite{harris1978use}, triangular~\cite{bartlett1950periodogram} and Welch~\cite{welch1967use} windows. These functions are given by Equation~\ref{eq.filter} and are plotted in Fig.~\ref{fig.filters}.
-%   \\
-%   \midrule
-%   \mono{-fs} & Char/String: \{S$|$small, M$|$medium, L$|$large\} & Filter scale (default: large). \\
-%   \midrule
-%   \mono{-d} & Integer: $[1, 2^{64}-1]$ & Sampling steps (default: 1). Instead of considering the whole information content, this option can be used to make samples of it. \\
-%   \midrule
-%   \mono{-th} & Float: $[0.0, 20.0]$ & threshold (default: 1.5). For the purpose of segmenting the filtered information content, the average entropy of reference-based compression is used by default as the threshold, but the threshold can be altered by this option. \\
-%   \midrule
-%   \mono{-rb} & Integer: $[-2^{15}, 2^{15}-1]$ & Reference beginning guard (default: 0). \\
-%   \mono{-re} & Integer: $[-2^{15}, 2^{15}-1]$ & Reference ending guard (default: 0). \\
-%   \mono{-tb} & Integer: $[-2^{15}, 2^{15}-1]$ & Target beginning guard (default: 0). \\
-%   \mono{-te} & Integer: $[-2^{15}, 2^{15}-1]$ & Target ending guard (default: 0). \\
-%   && \smashpp is capable of finding even very small similar regions in two sequences. However, we have found experimentally that when it is running in a very sensitive mode, there might be some cases in which the size of similar regions in the reference and the target are not balanced. These cases can be handled by ``-rb'', ``-re'', ``-tb'' and ``-te'' options, that can resize the beginning and ending guards of reference and target regions, respectively. For example, if ``-tb 10'' is used, the first 10 bases in each target region will be ignored, which results in smaller regions. Note that when the guard sizes of target regions are increased, the models built from these regions would be slightly different than the original models; consequently, the sizes of reference regions that are detected as being similar to the ones from the target would be modified, as well. Therefore, changing the guard sizes of target regions will affect the sizes of reference regions. In the case of activating deep compression, by ``-dp'', changing the guard sizes of reference regions would affect the sizes of target regions, as well. \\
-%   \midrule
-%   \mono{-dp} & --- $^\dagger$ & Deep compression. The ``deep compression'' means that similar regions in target and reference sequences are found in three phases instead of two: 1) the model of the reference is built and the target is compressed based upon that model, 2) the model of each detected region is built and the whole reference is compressed based on these models and 3) the model of each detected reference region is built and the corresponding target regions will be compressed based on that model. \\
-%   \midrule
-%   \mono{-nr} & --- & Do NOT compute self complexity. It makes the tool not to perform the reference-free compression (self-complexity computation). \\
-%   \midrule
-%   \mono{-sb} & --- & Save sequence (input: FASTA/FASTQ). \smashpp accepts \fasta and \fastq files as input, in addition to sequences. In these cases, the input files are first converted to sequences and then processed further. It is possible to save these sequences by this option. \\
-%   \midrule
-%   \mono{-sp} & --- & Save profile, *.prf. When the information profile is obtained, \smashpp smoothens then removes it by default. However, it can be preserved by this option. \\
-%   \midrule
-%   \mono{-sf} & --- & Save filtered file, *.fil. The filtered profile is segmented then removed, by default; however, it can be preserved by this option. \\
-%   \midrule
-%   \mono{-ss} & --- & Save segmented files, *.s$_i$. \\
-%   \midrule
-%   \mono{-sa} & --- & Save profile, filtered and segmented files. \\
-%   \midrule
-%   \mono{-rm} & $k$,[$w$,$d$,]ir,$a$,$g$/$t$,ir,$a$,$g$:... & Parameters of reference models (default: $14,0,0.005,0.95$). \\
-%   \mono{-tm} & $k$,[$w$,$d$,]ir,$a$,$g$/$t$,ir,$a$,$g$:... & Parameters of target models (default: $14,0,0.005,0.95$): \\
-% && \begin{minipage} [t] {9cm}
-%   \begin{itemize}
-%     \item $k$ (integer $>1$): context size,
-%     \item $w$ (integer $<2^{64}-1$): sketch width in $\log_2$ form, e.g., set 10 for $w=2^{10}=1024$,
-%     \item $d$ (integer $>0$): sketch depth,
-%     \item ir (integer: \{0, 1, 2\}): inverted repeat, including 0:~regular (not inverted), 1:~inverted solely, and 2:~both regular and inverted,
-%     \item $a$ (float $>0$): estimator,
-%     \item $g$ (float: $[0.0, 1.0)$): forgetting factor,
-%     \item $t$ (integer $>0$): threshold (number of substitutions).
-%   \end{itemize}
-% \end{minipage} \\
-%   && It is recommended for compression to use ``-l'' option, since it configures the models automatically. However, using ``-rm'' and ``-tm'', the user would be able to manually configure the reference model, for reference-based compression, and the target model, for reference-free compression, respectively. Parameters of the models are described in detail in section~\ref{sec.methods}. \\
-%   \midrule
-%   \mono{-ll} & --- & Show list of parameters that would be chosen automatically for each model. \\
-%   \midrule
-%   \mono{-h} & --- & Usage guide. \\
-%   \midrule
-%   \mono{-v} & --- & More information (verbose). \\
-%   \midrule
-%   \multicolumn{2}{@{}l}{\mono{--version}} & Show version. \\
+  \multicolumn{3}{@{}l@{}}{\textit{Required}} \\
+  \cmidrule{1-2}
+  \mono{-r} & Seq/FASTA/FASTQ & Reference file. \\
+  \mono{-t} & Seq/FASTA/FASTQ & Target file. \\
+  && It is highly recommended to have short names. \\
+  \midrule
+  \multicolumn{3}{@{}l@{}}{\textit{Optional}} \\
+  \cmidrule{1-2}
+  \mono{-l} & Integer: $[0, 5]$\newline Default: 0 & Level of compression. \\
+  \midrule
+  \mono{-m} & Integer: $[1, 2^{32}-1]$\newline Default: 50 & Minimum segment size. Only those regions in the reference file that are bigger than this value would be able to be considered for compression. \\
+  \midrule
+  \mono{-e} & Float: $[0.0, 100.0]$\newline Default: 2.0 & Entropy of `N's. In implementation of the reference-based compression, we have replaced `N' bases in the references and the targets with `A's and `T's, respectively. On reference-free compression, they are replaced with `A's, in both references and targets. If a user tends to replace `N' bases in a sequence with a normal distribution of `A', `C', `G' and `T's, he/she can employ GOOSE toolkit~\cite{web-goose}. \\
+  \midrule
+  \mono{-n} & Integer: $[1, 8]$\newline Default: 4 & Number of threads. Creating multiple finite-context models and substitutional-tolerant Markov models can be done in a multi-threaded fashion. \\
+  \midrule
+  \mono{-f} & Integer: $[1, 2^{32}-1]$\newline Default: 256 & Filter size. In the process of finding similar regions in the reference and the target sequences, the information content that would be obtained by compression needs to be filtered. \\
+  \midrule
+  \mono{-ft} & Integer or String:\newline \{0$\,|\,$rectangular, 1$\,|\,$hamming, 2$\,|\,$hann, 3$\,|\,$blackman, 4$\,|\,$triangular, 5$\,|\,$welch, 6$\,|\,$sine, 7$\,|\,$nuttall\}\newline Default: hann & Filter type (windowing function). Besides Hann window that is used by default to smooth the information content (profile), we have implemented several other windowing functions: Blackman~\cite{blackman1959particular}, Hamming~\cite{tukey1949measuring}, Nuttall~\cite{nuttall1981some}, rectangular~\cite{oppenheim1999discrete}, sine~\cite{harris1978use}, triangular~\cite{bartlett1950periodogram} and Welch~\cite{welch1967use} windows. These functions are given by Equation~\ref{eq.filter} and are plotted in Fig.~\ref{fig.filters}. \\
+  \midrule
+  \mono{-fs} & Char or String:\newline \{S$\,|\,$small, M$\,|\,$medium, L$\,|\,$large\}\newline Default: large & Filter scale. Automatically chooses filter size. \\
+  \midrule
+  \mono{-d} & Integer: $[1, 2^{64}-1]$\newline Default: 1 & Sampling steps. Instead of considering the whole information content, this option can be used to make samples of it. \\
+  \midrule
+  \mono{-th} & Float: $[0.0, 20.0]$\newline Default: 1.5 & threshold. For the purpose of segmenting the filtered information content, the average entropy of reference-based compression is used by default as the threshold, but the threshold can be altered by this option. \\
+  \midrule
+  \mono{-rb} & Integer: $[-2^{15}, 2^{15}-1]$ & Reference beginning guard. \\
+  \mono{-re} & Integer: $[-2^{15}, 2^{15}-1]$ & Reference ending guard. \\
+  \mono{-tb} & Integer: $[-2^{15}, 2^{15}-1]$ & Target beginning guard. \\
+  \mono{-te} & Integer: $[-2^{15}, 2^{15}-1]$ & Target ending guard. \\
+  & Default: 0 & \smashpp is capable of finding even very small similar regions in two sequences. However, we have found experimentally that when it is running in a very sensitive mode, there might be some cases in which the size of similar regions in the reference and the target are not balanced. These cases can be handled by ``-rb'', ``-re'', ``-tb'' and ``-te'' options, that can resize the beginning and ending guards of reference and target regions, respectively. For example, if ``-tb 10'' is used, the first 10 bases in each target region will be ignored, which results in smaller regions. Note that when the guard sizes of target regions are increased, the models built from these regions would be slightly different than the original models; consequently, the sizes of reference regions that are detected as being similar to the ones from the target would be modified, as well. Therefore, changing the guard sizes of target regions will affect the sizes of reference regions. In the case of activating deep compression, by ``-dp'', changing the guard sizes of reference regions would affect the sizes of target regions, as well. \\
+  \midrule
+  \mono{-dp} & --- & Deep compression. The ``deep compression'' means that similar regions in target and reference sequences are found in three phases instead of two: 1) the model of the reference is built and the target is compressed based upon that model, 2) the model of each detected region is built and the whole reference is compressed based on these models and 3) the model of each detected reference region is built and the corresponding target regions will be compressed based on that model. \\
+  \midrule
+  \mono{-nr} & --- & Do not compute self complexity. It makes the tool not to perform the reference-free compression (self-complexity computation). \\
+  \midrule
+  \mono{-sb} & --- & Save sequence (input: FASTA/FASTQ). \smashpp accepts \fasta and \fastq files as input, in addition to sequences. In these cases, the input files are first converted to sequences and then processed further. It is possible to save these sequences by this option. \\
+  \midrule
+  \mono{-sp} & --- & Save profile, *.prf. When the information profile is obtained, \smashpp smoothens then removes it by default. However, it can be preserved by this option. \\
+  \midrule
+  \mono{-sf} & --- & Save filtered file, *.fil. The filtered profile is segmented then removed, by default; however, it can be preserved by this option. \\
+  \midrule
+  \mono{-ss} & --- & Save segmented files, *.s$_i$. \\
+  \midrule
+  \mono{-sa} & --- & Save profile, filtered and segmented files. \\
+  \midrule
+  \mono{-rm} & $k$,[$w$,$d$,]ir,$\alpha$,$\gamma$/$t$,ir,$\alpha$,$\gamma$:... & Parameters of reference models. \\
+  \mono{-tm} & $k$,[$w$,$d$,]ir,$\alpha$,$\gamma$/$t$,ir,$\alpha$,$\gamma$:... & Parameters of target models: \\
+& Default: $14,0,0.005,0.95$ & \begin{minipage} [t] {9cm}
+  \begin{itemize}
+    \item $k$ (integer $>1$): context size,
+    \item $w$ (integer $<2^{64}-1$): sketch width in $\log_2$ form, e.g., set 10 for $w=2^{10}=1024$,
+    \item $d$ (integer $>0$): sketch depth,
+    \item ir (integer: \{0, 1, 2\}): inverted repeat, including 0:~regular (not inverted), 1:~inverted solely, and 2:~both regular and inverted,
+    \item $\alpha$ (float $>0$): estimator,
+    \item $\gamma$ (float: $[0.0, 1.0)$): forgetting factor,
+    \item $t$ (integer $>0$): threshold (number of substitutions).
+  \end{itemize}
+\end{minipage} \\
+  && It is recommended for compression to use ``-l'' option, since it configures the models automatically. However, using ``-rm'' and ``-tm'', the user would be able to manually configure the reference model, for reference-based compression, and the target model, for reference-free compression, respectively. Parameters of the models are described in detail in section~\ref{sec.methods}. \\
+  \midrule
+  \mono{-ll} & --- & Show list of parameters that would be chosen automatically for each model. \\
+  \midrule
+  \mono{-h} & --- & Usage guide. \\
+  \midrule
+  \mono{-v} & --- & More information (verbose). \\
+  \midrule
+  \multicolumn{2}{@{}l}{\mono{--version}} & Show version. \\
   \bottomrule
-  \vspace{-2mm}
-  % \multicolumn{2}{@{}l}{$^*$ Mandatory, $^\dagger$ no input, $\times$ not used} & \\
 \end{tabularx}
 \end{small}
 
@@ -179,69 +180,133 @@ and a body including:
   \item Average entropy of compressing the associated reference block considering this target block as the reference,
   \item Complexity of the detected target block, calculated by reference-free compression.
 \end{enumerate}
-As an example, the header of the following ``.pos'' file shows that the reference ``Ref'' and the target ``Tar'' are 5,000,000 bases long. The body shows that there is a block in the Ref, from the position 1250013 up to 2499988, which is similar to a block in the Tar, from the position 1250017 to 2499970. Average entropy of compressing the Tar block, using the Ref block as reference, is 0.238067. This number is 0.26698 when the Ref block is compressed based on the model of the Tar block. Also, complexities of the Ref and the Tar blocks are 1.97158 and 1.98884, respectively.
+As an example, the header of the following ``.pos'' file shows that the reference ``Ref'' and the target ``Tar'' are 5,000,000 bases long. The body shows that there is a block in the Ref, from the position 2000000 up to 3000000, which is similar to a block in the Tar, from the position 3000000 to 4000000. Average entropy of compressing the Tar block, using the Ref block as reference, is 0.255555. This number is 0.26666 when the Ref block is compressed based on the model of the Tar block. Also, complexities of the Ref and the Tar blocks are 1.97777 and 1.98888, respectively.
 \begin{code}[style=bash]
 #SMASHPP Ref      5000000  Tar      5000000
-1250013	 2499988  0.26698  1.97158  1250017  2499970  0.238067 1.98884
+2000000	 3000000  0.26666  1.97777  3000000  4000000  0.25555 1.98888
 \end{code}
 
 
 \subsection{Run \smashpp visualizer}
-Running \smashpp (without visualization), positions of the similar regions in reference and target sequences, and also complexity of the regions is saved in a *.pos file, that can be visualized by
+The position file obtained by running \smashpp can be visualized by
 \begin{code}[style=bash]
 ./smashpp -viz
 \end{code}
-which gives
+The visualizer provides various options that are described in Table~\ref{tab.options.viz}. The commands for running \smashpp visualizer are of the form
 \begin{code}[style=bash]
-SYNOPSIS
   ./smashpp -viz [OPTIONS]  -o <SVG-FILE>  <POS-FILE>
-
-OPTIONS
-  Required:
-  <POS-FILE>         = position file, generated by
-                       Smash++ tool (*.pos)
-
-  Optional:
-  -o  <SVG-FILE>     = output image name (*.svg)             -> map.svg
-  -rn <STRING>       = reference name shown on output. If it
-                       has space, use double quotes, e.g.
-                       "Seq label". Default: name in header
-                       of position file
-  -tn <STRING>       = target name shown on output
-  -l  <INT>          = type of the link between maps: [1, 6] -> 1
-  -c  <INT>          = color mode: [0, 1]                    -> 0
-  -p  <FLOAT>        = opacity: [0.0, 1.0]                   -> 0.9
-  -w  <INT>          = width of the sequence: [15, 100]      -> 16
-  -s  <INT>          = space between sequences: [15, 200]    -> 62
-  -f  <INT>          = multiplication factor for             -> 43
-                       color ID: [1, 255]
-  -b  <INT>          = beginning of color ID: [0, 255]       -> 0
-  -rt <INT>          = reference tick: [1, 4294967295]
-  -tt <INT>          = target tick: [1, 4294967295]
-  -th [0][1]         = tick human readable: 0=false, 1=true  -> 1
-  -m  <INT>          = minimum block size: [1, 4294967295]   -> 1
-  -vv                = vertical view                         -> no
-  -nn                = do NOT show normalized relative       -> no
-                       compression (NRC)
-  -nr                = do NOT show self complexity           -> no
-  -ni                = do NOT show inverse maps              -> no
-  -ng                = do NOT show regular maps              -> no
-  -h                 = usage guide
-  -v                 = more information
-  --version          = show version
 \end{code}
 
-The output of \smashpp visualizer is an ``SVG'' file whose name is determined by ``-o'' option. By default, it is named ``map.svg''. 
-Names of the reference and the target, which are going to be printed on the output image, can be altered by ``-rn'' and ``-tn'', respectively. They are by default the names written in the positions file. 
+\begin{small}
+  \begin{tabularx}{\linewidth}{@{}lp{2.7cm}X@{}}
+    \caption{Options provided by \smashpp visualizer interface.}
+    \label{tab.options.viz} \\
+    \toprule
+    Flag & Input & Description \\
+    \midrule
+    \multicolumn{3}{@{}l@{}}{\textit{Required}} \\
+    \cmidrule{1-2}
+    & *.pos file & Position file, generated by Smash++ tool. \\
+    \midrule
+    \multicolumn{3}{@{}l@{}}{\textit{Optional}} \\
+    \cmidrule{1-2}
+    \mono{-o} & *.svg file\newline Default: map.svg & Output image name. \\
+    \midrule
+    \mono{-rn} & String & Reference name shown on output. \\
+    \mono{-tn} & String & Target name shown on output. \\
+    & Default: names in position file's header & If it has space, use double quotes, e.g. ``Seq label''. \\
+    \midrule
+    \mono{-l} & Integer: $[1, 6]$\newline Default: 1 & Type of the link between maps. \\
+    \midrule
+    \mono{-c} & Integer: $[0, 1]$\newline Default: 0 & Color mode. \\
+    \midrule
+    \mono{-p} & Float: $[0.0, 1.0]$\newline Default: 0.9 & Opacity. \\
+    \midrule
+    \mono{-w} & Integer: $[15, 100]$\newline Default: 16 & Width of the sequence. \\
+    \midrule
+    \mono{-s} & Integer: $[15, 200]$\newline Default: 62 & Space between sequences. \\
+    \midrule
+    \mono{-f} & Integer: $[1, 255]$\newline Default: 43 & Multiplication factor for color ID. \\
+    \midrule
+    \mono{-b} & Integer: $[0, 255]$\newline Default: 0 & Beginning of color ID. \\
+    \midrule
+    \mono{-rt} & Integer: $[1, 2^{32}-1]$ & Reference tick size. \\
+    \mono{-tt} & Integer: $[1, 2^{32}-1]$ & Target tick size. \\
+    \midrule
+    \mono{-th} & Integer: $\{0, 1\}$\newline Default: 1 & Tick human readable: 0=false, 1=true. If it is true, the sizes on axes are printed in the format 1K, 2M, etc. Note that here, 1K is equivalent to 1000 and not 1024, and so on. \\
+    \midrule
+    \mono{-m} & Integer: $[1, 2^{32}-1]$\newline Default: 1 & Minimum block size. Only the regions that are bigger than this value will be illustrated. \\
+    \midrule
+    \mono{-vv} & --- & Vertical view of the output image. \\
+    \midrule
+    \mono{-nn} & --- & Do not show normalized relative compression (NRC). \\
+    \mono{-nr} & --- & Do not show self complexity. \\
+    && \smashpp performs reference-based and reference-free compressions to calculate the NRC and redundancy (self complexity), respectively. If the user is not interested in showing them, he/she can turn them off by ``-nn'' and ``-nr'' triggers. \\
+    \midrule
+    \mono{-ni} & --- & Do not show inverse maps. \\
+    \mono{-ng} & --- & Do not show regular (not inverse) maps. \\
+    && \smashpp considers by default both regular and reverse complement maps in its calculations. \\
+    \midrule
+    \mono{-h} & --- & Usage guide. \\
+    \midrule
+    \mono{-v} & --- & More information (verbose). \\
+    \midrule
+    \multicolumn{2}{@{}l@{}}{\mono{--version}} & Show version. \\
+    \bottomrule
+  \end{tabularx}
+\end{small}
 
-Options ``-l'', ``-c'', ``-p'', ``-w'', ``-s'', ``-f'' and ``-b'' can be used to change the appearance of the image.
+% which gives
+% \begin{code}[style=bash]
+% SYNOPSIS
+%   ./smashpp -viz [OPTIONS]  -o <SVG-FILE>  <POS-FILE>
 
-Assigning integers to ``-rt'' and ``-tt'' options will change the tick sizes of the reference and the target, respectively. \smashpp prints the sizes on axes in human readable format, e.g., 1K, 2M, etc. However, it can be triggered by ``-th'' option. Note that, here, 1K is equivalent to 1000 and not 1024, and so on. 
+% OPTIONS
+%   Required:
+%   <POS-FILE>         = position file, generated by
+%                        Smash++ tool (*.pos)
 
-By setting ``-m'' to an integer value, only the regions that are bigger than that value will be illustrated.
-To have a vertical view of the image, instead of the default horizontal view, one can use ``-vv'' trigger.
+%   Optional:
+%   -o  <SVG-FILE>     = output image name (*.svg)             -> map.svg
+%   -rn <STRING>       = reference name shown on output. If it
+%                        has space, use double quotes, e.g.
+%                        "Seq label". Default: name in header
+%                        of position file
+%   -tn <STRING>       = target name shown on output
+%   -l  <INT>          = type of the link between maps: [1, 6] -> 1
+%   -c  <INT>          = color mode: [0, 1]                    -> 0
+%   -p  <FLOAT>        = opacity: [0.0, 1.0]                   -> 0.9
+%   -w  <INT>          = width of the sequence: [15, 100]      -> 16
+%   -s  <INT>          = space between sequences: [15, 200]    -> 62
+%   -f  <INT>          = multiplication factor for             -> 43
+%                        color ID: [1, 255]
+%   -b  <INT>          = beginning of color ID: [0, 255]       -> 0
+%   -rt <INT>          = reference tick: [1, 4294967295]
+%   -tt <INT>          = target tick: [1, 4294967295]
+%   -th [0][1]         = tick human readable: 0=false, 1=true  -> 1
+%   -m  <INT>          = minimum block size: [1, 4294967295]   -> 1
+%   -vv                = vertical view                         -> no
+%   -nn                = do NOT show normalized relative       -> no
+%                        compression (NRC)
+%   -nr                = do NOT show self complexity           -> no
+%   -ni                = do NOT show inverse maps              -> no
+%   -ng                = do NOT show regular maps              -> no
+%   -h                 = usage guide
+%   -v                 = more information
+%   --version          = show version
+% \end{code}
 
-\smashpp performs reference-based and reference-free compressions to calculate the normalized relative compression (NRC) and redundancy (self complexity), respectively. If the user is not interested in showing them, he/she can turn them off by ``-nn'' and ``-nr'' triggers. In addition, \smashpp considers by default both regular and reverse complement maps in its calculations. Triggering ``-ni'' and ``-ng'' will stop showing inverted and regular maps, respectively.
+% The output of \smashpp visualizer is an ``SVG'' file whose name is determined by ``-o'' option. By default, it is named ``map.svg''. 
+% Names of the reference and the target, which are going to be printed on the output image, can be altered by ``-rn'' and ``-tn'', respectively. They are by default the names written in the positions file. 
+
+% Options ``-l'', ``-c'', ``-p'', ``-w'', ``-s'', ``-f'' and ``-b'' can be used to change the appearance of the image.
+
+% Assigning integers to ``-rt'' and ``-tt'' options will change the tick sizes of the reference and the target, respectively. \smashpp prints the sizes on axes in human readable format, e.g., 1K, 2M, etc. However, it can be triggered by ``-th'' option. Note that, here, 1K is equivalent to 1000 and not 1024, and so on. 
+
+% By setting ``-m'' to an integer value, only the regions that are bigger than that value will be illustrated.
+% To have a vertical view of the image, instead of the default horizontal view, one can use ``-vv'' trigger.
+
+% \smashpp performs reference-based and reference-free compressions to calculate the normalized relative compression (NRC) and redundancy (self complexity), respectively. If the user is not interested in showing them, he/she can turn them off by ``-nn'' and ``-nr'' triggers. In addition, \smashpp considers by default both regular and reverse complement maps in its calculations. Triggering ``-ni'' and ``-ng'' will stop showing inverted and regular maps, respectively.
 
 \subsection{Example}
 This section guides step-by-step employing \smashpp to find and visualize rearrangements in a sample genomic data. Note that the commands can be run on Linux and macOS, however, they are similar in Windows.
